@@ -1,0 +1,4 @@
+"""Test deprecated modules from Python 3.3."""
+# pylint: disable=unused-import
+
+import xml.etree.cElementTree  # [deprecated-module]
